# remi-rs

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  crate-readme.tmpl  default.nix  deny.toml  flake.nix  renovate.json  rust-toolchain.toml  rustfmt.toml  shell.nix
.coder/scripts/pre-init/: fix-rustc.sh
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md
.github/workflows/: Lint.yaml  Release.yaml
crates/azure/: Cargo.toml  README.md
crates/azure/src/: config.rs  lib.rs  service.rs
crates/fs/: Cargo.toml  README.md  build.rs
crates/fs/examples/: filesystem.rs
crates/fs/src/: config.rs  content_type.rs  lib.rs  service.rs
crates/gcp/: Cargo.toml  README.md
crates/gcp/src/: lib.rs
crates/gridfs/: Cargo.toml  README.md
crates/gridfs/src/: config.rs  lib.rs  service.rs
crates/oci/: README.md
crates/s3/: Cargo.toml  README.md
crates/s3/src/: config.rs  error.rs  lib.rs  service.rs
hack/: publish
nix/: devshell.nix
remi/: Cargo.toml  README.md
remi/src/: blob.rs  lib.rs  metadata.rs  options.rs
remi_core/: Cargo.toml  README.md
remi_core/src/: blob.rs  builders.rs  lib.rs
remi_support/azure/: Cargo.toml
remi_support/azure/src/: lib.rs
remi_support/fs/: Cargo.toml  README.md
remi_support/fs/src/: config.rs  content_type.rs  lib.rs  service.rs
remi_support/gcs/: Cargo.toml
remi_support/gridfs/: Cargo.toml  README.md
remi_support/gridfs/src/: config.rs  lib.rs  service.rs
remi_support/s3/: Cargo.toml  README.md
remi_support/s3/src/: config.rs  lib.rs  service.rs
scripts/: publish-all.sh  release.sh  render-crate-readme.sh
