# 🐻‍❄️🧶 remi-rs: Robust, and simple asynchronous Rust crate to handle storage-related communications with different storage providers
# Copyright (c) 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "remi-azure"
description = "🐻‍❄️🧶 Azure Blob Storage implementation of `remi-rs`"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["serde"]
tracing = ["dep:tracing"]
serde = ["dep:serde"]
log = ["dep:log"]

[dependencies]
async-trait = "0.1.79"
azure_core = "0.19.0"
azure_storage = "0.19.0"
azure_storage_blobs = "0.19.0"
bytes = "1.6.0"
futures-util = "0.3.30"
log = { version = "0.4.21", optional = true }
remi = { path = "../../remi", version = "0.6.3" }
serde = { version = "1.0.197", features = ["derive"], optional = true }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
testcontainers = "0.15.0"
tokio = { version = "1.37.0", features = ["macros", "rt"] }
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
which = "6.0.1"

[package.metadata.docs.rs]
all-features = true
