# 🐻‍❄️🧶 remi-rs: Robust, and simple asynchronous Rust crate to handle storage-related communications with different storage providers
# Copyright (c) 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "remi-fs"
description = "🐻‍❄️🧶 Local filesystem implementation for remi"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
file-format = ["dep:infer", "dep:file-format"]
serde_json = ["dep:serde_json"]
serde_yaml = ["dep:serde_yaml"]
async-std = ["dep:async-std"]
default = ["file-format"]
tracing = ["dep:tracing"]
serde = ["dep:serde"]
log = ["dep:log"]

[dependencies]
async-std = { version = "1.12.0", optional = true }
async-trait = "0.1.77"
bytes = "1.5.0"
dirs = "5.0.1"
file-format = { version = "0.23.0", optional = true }
futures = "0.3.30"
infer = { version = "0.15.0", default-features = false, optional = true }
log = { version = "0.4.20", optional = true }
remi = { path = "../../remi" }
serde = { version = "1.0.195", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }
serde_yaml = { version = "0.9.27", optional = true }
tokio = { version = "1.35.1", features = ["fs", "io-util"] }
tracing = { version = "0.1.40", optional = true }

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt", "fs", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[example]]
name = "filesystem"
path = "./examples/filesystem.rs"
required-features = ["tracing"]
