# 🐻‍❄️🧶 remi-rs: Asynchronous Rust crate to handle communication between applications and object storage providers
# Copyright (c) 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "remi-fs"
description = "🐻‍❄️🧶 Official and maintained remi-rs crate for support of the local filesystem"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(noeldoc)'] }

[features]
default = ["file-format", "serde_json"]

file-format = ["dep:infer", "dep:file-format"]
serde_json = ["dep:serde_json"]
serde_yaml_ng = ["dep:serde_yaml_ng"]
serde_yaml = ["serde_yaml_ng"]                 # alias for `serde_yaml_ng`
unstable = ["remi/unstable"]
tracing = ["dep:tracing"]
serde = ["dep:serde"]
log = ["dep:log"]

[dependencies]
etcetera = "0.8.0"
file-format = { version = "0.25.0", features = ["reader-txt"], optional = true }
infer = { version = "0.16.0", default-features = false, optional = true }
log = { version = "0.4.22", optional = true }
remi = { path = "../../remi", version = "0.9.0" }
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
serde_yaml_ng = { version = "0.10.0", optional = true }
tokio = { version = "1.40.0", features = ["fs", "io-util"] }
tracing = { version = "0.1.40", optional = true }

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "fs", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[example]]
name = "filesystem"
path = "./examples/filesystem.rs"
required-features = ["tracing"]
