# 🐻‍❄️🧶 remi-rs: Asynchronous Rust crate to handle communication between applications and object storage providers
# Copyright (c) 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "remi-s3"
description = "🐻‍❄️🧶 Official and maintained remi-rs crate for support of Amazon S3"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(noeldoc)'] }

[features]
default = []

export-crates = []
unstable = ["remi/unstable"]
tracing = ["dep:tracing"]
serde = ["dep:serde"]
log = ["dep:log"]

[dependencies]
aws-config = "1.5.8"
aws-credential-types = "1.2.1"
aws-sdk-s3 = { version = "1.56.0", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1.7.2"
log = { version = "0.4.22", optional = true }
remi = { path = "../../remi", version = "0.10.1" }
serde = { version = "1.0.210", features = ["derive"], optional = true }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
bollard.workspace = true
testcontainers.workspace = true
tokio = { version = "1.40.0", features = ["macros", "rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[package.metadata.docs.rs]
all-features = true
