# 🐻‍❄️🧶 remi-rs: Robust, and simple asynchronous Rust crate to handle storage-related communications with different storage providers
# Copyright (c) 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "remi-fs"
description = "🐻‍❄️🧶 Local filesystem implementation for remi-rs"
version = "0.0.0-devel.0"
repository = "https://github.com/Noelware/remi-rs/tree/master/support/remi_fs"
license = "MIT"
edition = "2021"
# homepage = "https://docs.noelware.org/libraries/rust/remi-rs/latest/remi_fs"
rust-version = "1.67.0"

[features]
file-format = ["dep:infer", "dep:file-format"]
async-std = ["dep:async-std"]
default = ["file-format"]
serde = ["dep:serde"]
log = ["dep:log"]

[dependencies]
async-std = { version = "1.12.0", optional = true }
async-trait = "0.1.72"
bytes = "1.4.0"
derive_builder = "0.12.0"
dirs = "5.0.1"
file-format = { version = "0.18.0", optional = true }
futures = "0.3.28"
infer = { version = "0.15.0", default-features = false, optional = true }
log = { version = "0.4.19", optional = true }
remi-core = { version = "0.0.0-devel.0", path = "../../remi_core" }
serde = { version = "1.0.180", features = ["derive"], optional = true }
tokio = { version = "1.29.1", features = ["fs", "io-util"] }
