# 🐻‍❄️🧶 remi-rs: Robust, and simple asynchronous Rust crate to handle storage-related communications with different storage providers
# Copyright (c) 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "remi-s3"
description = "🐻‍❄️🧶 Amazon S3 implementation for remi-rs"
version = "0.0.0-devel.0"
repository = "https://github.com/Noelware/remi-rs/tree/master/support/remi_s3"
license = "MIT"
edition = "2021"
# homepage = "https://docs.noelware.org/libraries/rust/remi-rs/latest/remi_s3"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
async-trait = "0.1.72"
aws-config = "0.55.3"
aws-credential-types = "0.55.3"
aws-sdk-s3 = "0.28.0"
bytes = "1.4.0"
derive_builder = "0.12.0"
log = "0.4.19"
remi-core = { version = "0.0.0-devel.0", path = "../../remi_core" }
serde = { version = "1.0.175", features = ["derive"], optional = true }
tokio = { version = "1.29.1", features = ["full"] }
